# compiler-essentials

./: .gitignore  .gitmodules  CMakeLists.txt  IR->dag.md  LICENSE  README.md  install-riscv.sh  requirements.txt
.github/workflows/: build_test.yml  release.yaml
cmake/: add-subdir-recursive.cmake
loop/: CMakeLists.txt  LoopOptTutorial.cpp  README.md
practice/: bacic.ll
rust/: Cargo.toml
rust/src/: common_sense.rs  enum.rs  guess_number.rs  ownership.rs
src/: CMakeLists.txt  README.md
src/function/: CMakeLists.txt  HelloWorld.cpp  Mem2Reg.cpp
src/gpu/: CMakeLists.txt  device-info.py  matrixmul.cpp  simple-matadd.py  simple-matmul-triton.py
src/gpu/divergence/: divergence.cu
src/jit/: CMakeLists.txt  jit-main.cpp  jit.h
src/loop/: CMakeLists.txt  LoopOptTutorial.cpp  LoopOptTutorial.h  LoopUnroll.cpp  README.md
src/mlir/: CMakeLists.txt  README.md  build-standalone.sh  codegen.mlir  stadalone_world.mlir  standalone.cmake  toy.cmake  toy.mlir
src/mlir/include/: AST.h  CMakeLists.txt  Dialect.h  Lexer.h  Ops.td  Parser.h  Passes.h  ShapeInferenceInterface.h  ShapeInferenceInterface.td
src/mlir/standalone/: CMakeLists.txt  LowerToLLVM.cpp  StandaloneDialect.cpp  StandaloneDialect.h  StandaloneOps.cpp  StandaloneOps.h  StandalonePasses.h  createSimpleAttr.cpp  dummy.mlir
src/mlir/standalone/standalone/: CMakeLists.txt  StandaloneDialect.td  StandaloneOps.td
src/mlir/toy/: AST.cpp  Dialect.cpp  MLIRGen.cpp  README.md  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td  ToyToLLVM.cpp  toy.cpp  toyToAffineLoops.cpp
src/smallcc/: CMakeLists.txt  smallcc-main.cpp
src/smallcc/include/: tokenizer.h
src/support/: CMakeLists.txt  commandline.cpp
src/tablegen/: CMakeLists.txt  main.cpp
src/tinylang/: CMakeLists.txt
src/tinylang/driver/: CMakeLists.txt  lexer.cpp  parser.cpp
src/tinylang/include/AST/: AST.h
src/tinylang/include/Basic/: Config.h  Config.inc.in  Diagnostic.def  Diagnostic.h  TokenKinds.def  TokenKinds.h
src/tinylang/include/Lexer/: Lexer.h  Token.h
src/tinylang/include/Parser/: Parser.h
src/tinylang/include/Sema/: Scope.h  Sema.h
src/tinylang/lib/: CMakeLists.txt
src/tinylang/lib/Basic/: CMakeLists.txt  Config.cpp  Diagnostic.cpp  TokenKinds.cpp
src/tinylang/lib/Lexer/: CMakeLists.txt  Lexer.cpp
src/tinylang/lib/Parser/: CMakeLists.txt  Parser.cpp
src/tinylang/lib/Sema/: CMakeLists.txt  Scope.cpp  Sema.cpp
src/tinylang/test/: CMakeLists.txt  basic.cpp  lexer.cpp  tokenkind.cpp
test/: CMakeLists.txt  commandline.ll  helloworld.ll  lit.cfg.py  lit.site.cfg.py  lit.site.cfg.py.in  mem2reg_test.ll  simple.ll
test/jit/: hello-world.ll
test/mlir/: codegen.toy  muladd.mlir  shape_inference.mlir  toyToAffine.mlir  transpose_transpose.toy
test/smallcc/: input.c
test/tools/: sample.td
tips/: swap.md
tools/: CMakeLists.txt
tools/my-exegesis/: CMakeLists.txt  my-exegesis.cpp
tools/my-exegesis/lib/: BenchmarkResult.cpp  BenchmarkResult.h  BenchmarkRunner.cpp  BenchmarkRunner.h  CMakeLists.txt  InMemoryAssembler.cpp  InMemoryAssembler.h  InstructionSnippetGenerator.cpp  InstructionSnippetGenerator.h  LatencyBenchmarkRunner.cpp  LatencyBenchmarkRunner.h  LlvmState.cpp  LlvmState.h  OperandGraph.cpp  OperandGraph.h  PerfHelper.cpp  PerfHelper.h  UopsBenchmarkRunner.cpp  UopsBenchmarkRunner.h  X86.cpp  X86.h
tools/tablegen/: CMakeLists.txt  TinyTablegenEmitter.cpp  TinyTablegenEmitter.h  main.cpp
tutorial/: README.md  llvm-tips.md  llvm_pass_manager.md  未命名绘图.drawio
tutorial/computer_organization_and_design_the_hardwre(riscv)/: chapter1.md
tutorial/llvm/: pplex.md
utils/: qemu-test.py
