[package]
name = "rust-learning"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello_world"
path = "src/hello_world.rs"

[[bin]]
name = "guess_number"
path = "src/guess_number.rs"

[[bin]]
name = "common_sense"
path = "src/common_sense.rs"

[[bin]]
name = "owner_ship"
path = "src/ownership.rs"

[[bin]]
name = "enum"
path = "src/enum.rs"

[dependencies]
rand = "0.8.5"
